--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -52,6 +52,12 @@ body
 #ezieMainContainer, .ui-widget
 	z-index: 8000000!important
 
+#mceModalBlocker // TinyMCE backdrop
+	z-index: 29999900
+
+.clearlooks2 // TinyMCE window
+	z-index: 30000100
+
 .eze
 	text-rendering: optimizeLegibility
 	-webkit-text-size-adjust: none
