--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -130,6 +130,10 @@
 				.has-children-arrow
 					background-color: #ffc27f
 					opacity: 0.8
+
+		.dnd .nodes .no-drop
+			opacity: 0.5
+			filter: alpha(opacity=50)
 				
 	.kp-finder-content 
 		clear: both
